--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
 
     <section class="catalogue">
       <div class="card">
-        <img src="images/file_00000000811061f8a0e3defb84346a83.png" alt="Image de présentation">
-        <h3>Théologie Biblique Systématique</h3>
+        <h3>
+  <img src="https://i.ibb.co/G3C4CcG7/file-00000000811061f8a0e3defb84346a83.png" 
+       alt="Icône Théologie" 
+       style="height: 24px; vertical-align: middle; margin-right: 8px;">
+  Théologie Biblique Systématique
+        </h3>
         <p>Une étude profonde de la Parole de Dieu pour tous niveaux.</p>
         <a href="https://sites.google.com/view/formationentheologiebiblique" class="btn-small">Commencer</a>
       </div>
