--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
       </div>
 
       <div class="card">
-      	<img src="images/Screenshot_20250512-201006~3.jpg" alt="Capture d'écran">
-        <h3>Informatique Bureautique</h3>
+      	<h3 style="text-align: center;">
+  <img src="https://i.ibb.co/bR7mmtrQ/IMG-20250512-WA0130.jpg" 
+       alt="Icône Informatique" 
+       style="height: 150px; display: block; margin: 0 auto 15px;">
+  Informatique Bureautique
+        </h3>
         <p>Apprenez Word, Excel, PowerPoint et bien plus à votre rythme.</p>
         <a href="https://forms.gle/2PmQzFNd6T9QaSt98" class="btn-small">Commencer</a>
       </div>
