--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       	<h3 style="text-align: center;">
   <img src="https://i.ibb.co/bR7mmtrQ/IMG-20250512-WA0130.jpg" 
        alt="Icône Informatique" 
-       style="height: 150px; display: block; margin: 0 auto 15px;">
+       style="height: 150px; vertical-align:  middle; margin-right: 15px;">
   Informatique Bureautique
         </h3>
         <p>Apprenez Word, Excel, PowerPoint et bien plus à votre rythme.</p>
