--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
   <main>
     <section class="hero">
-      <h2>Formations gratuites pour tous</h2>
-      <p>Commencez dès aujourd'hui, à votre rythme et sans frais.</p>
+      <h2>Formations professionnelles accessibles à tous</h2>
+      <p>Commencez dès aujourd'hui, à votre rythme</p>
     </section>
 
     <section class="catalogue">
