--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <p class="slogan">Former, transformer, Réussir</p>
 
     <nav class="menu">
-      <a href="#">Accueil</a>
-      <a href="#">Nos cours</a>
+      <a href="https://sites.google.com/view/ecoledeformationettechnique/accueil">Accueil</a>
+      <a href="https://sites.google.com/view/ecoledeformationettechnique/accueil">Nos cours</a>
       <a href="https://wa.me/50943750836">Contact</a>
     </nav>
   </header>
