--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         <p>Apprenez Word, Excel, PowerPoint et bien plus à votre rythme.</p>
         <a href="https://forms.gle/2PmQzFNd6T9QaSt98" class="btn-small">Commencer</a>
 </div>
+
+<div class="card">
+<h3 style="text-align: center;">
+  <img src="https://cdn-icons-png.flaticon.com/512/2906/2906274.png" alt="Gestion de Projet" style="height: 150px; vertical-align: middle; margin-right: 15px;">
+    <p style="font-size: 14px; color: #666;">Apprenez les bases pour planifier, exécuter et réussir vos projets professionnels.</p>
+    <a href="gestion-de-projet.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Commencer</a>
+  </div>
+</div>
       </div>
     </section>
   </main>
