--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   style="height: 150px; vertical-align: middle; margin-right: 15px;">Gestion de projet
 </h3>
     <p style="font-size: 14px; color: #666;">Apprenez les bases pour planifier, exécuter et réussir vos projets professionnels.</p>
-    <<a href="https://ibb.co/DHzxV5pL"><img src="https://i.ibb.co/cSkGgDLx/bientorange-2x.png" alt="bientorange-2x" border="0"></a>" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Commencer</a>
+    <<a href="https://ibb.co/DHzxV5pL"><img src="https://i.ibb.co/cSkGgDLx/bientorange-2x.png" alt="bientorange-2x" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Commencer</a>
 </div>
 </div>
       </div>
@@ -74,4 +74,5 @@
 
 </body>
 </html>
+
 
