--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   style="height: 150px; vertical-align: middle; margin-right: 15px;">Gestion de projet
 </h3>
     <p style="font-size: 14px; color: #666;">Apprenez les bases pour planifier, exécuter et réussir vos projets professionnels.</p>
-        <a href="https://formatech200.github.io/Bient-t-disponible-/" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Commencer</a>
+        <a href="https://forms.gle/xmerpA4L59pNFkHs5" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Commencer</a>
 </div>
 </div>
       </div>
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
